--- a/debhelper.1
+++ b/debhelper.1
@@ -151,4 +151,4 @@ A set of example debian/rules files that use debhelper.
 .BR http://kitenet.net/programs/debhelper/
 Debhelper web site.
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
