--- a/dh_compress.1
+++ b/dh_compress.1
@@ -72,4 +72,4 @@ Filenames with spaces in them may not properly be compressed.
 .SH "CONFORMS TO"
 Debian policy, version 3.0.0.0
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
