--- a/dh_debstd.1
+++ b/dh_debstd.1
@@ -72,4 +72,4 @@ It doesn't completly mimic debstd. Some things debstd handles are not supported
 by debhelper. Everything that is not supported will generate a warning
 message if you try to use it.
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
