--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -88,4 +88,4 @@ in debian/docs file. This is more a historical design flaw than a bug.
 .SH "CONFORMS TO"
 Debian policy, version 3.0.1
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
