--- a/dh_installemacsen.1
+++ b/dh_installemacsen.1
@@ -52,4 +52,4 @@ instances of the same text to be added to maintainer scripts.
 .TP
 .BR /usr/doc/emacsen-common/debian-emacs-policy.gz
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
