--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -56,4 +56,4 @@ almost never what you really want (use -p to work around this).
 .P
 This is a "Do what I Mean" type program - you have been warned!
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
