--- a/dh_installwm.1
+++ b/dh_installwm.1
@@ -43,4 +43,4 @@ instances of the same text to be added to maintainer scripts.
 .TP
 .BR register-window-manager (8)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
