--- a/dh_makeshlibs.1
+++ b/dh_makeshlibs.1
@@ -57,4 +57,4 @@ number by specifying the -m parameter.
 .P
 This is a "do what I Mean" type program - you have been warned!
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
