--- a/dh_strip.1
+++ b/dh_strip.1
@@ -31,4 +31,4 @@ for a list of environment variables that affect all debhelper commands.
 .SH "CONFORMS TO"
 Debian policy, version 3.0.1
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
