--- a/dh_testdir.1
+++ b/dh_testdir.1
@@ -1,9 +1,9 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_TESTDIR 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_testdir \- test directory before building debian package
 .SH SYNOPSIS
 .B dh_testdir
-.I "[-v] [file ...]"
+.I "[debhelper options] [file ...]"
 .SH "DESCRIPTION"
 dh_testdir tries to make sure that you are in the correct directory when
 building a debian package. It makes sure that the file debian/control
@@ -11,19 +11,18 @@ exists, as well as any other files you specify. If not,
 it exits with an error.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
-This currently has no effect.
+.B [debhelper options]
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
 .B file ...
-Test for the existance of these files.
+Test for the existence of these files.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
-.SH BUGS
-Files with spaces in their names will not be processed correctly.
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
