--- a/dh_testroot.1
+++ b/dh_testroot.1
@@ -1,9 +1,9 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_TESTROOT 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_testroot \- ensure that a package is built as root
 .SH SYNOPSIS
 .B dh_testroot
-.I "[-v]"
+.I "[debhelper options]"
 .SH "DESCRIPTION"
 dh_testroot simply checks to see if you are root. If not, it exits with an
 error. Debian packages must be built as root, though you can use
@@ -11,14 +11,15 @@ error. Debian packages must be built as root, though you can use
 to work around this.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
-This currently has no effect.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode.
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
