--- a/doc/README
+++ b/doc/README
@@ -71,4 +71,4 @@ Other notes:
 
 * Debhelper's home page is at http://kitenet.net/programs/debhelper/
 
--- Joey Hess <joeyh@master.debian.org>
+-- Joey Hess <joeyh@debian.org>
