--- a/dh_clean.1
+++ b/dh_clean.1
@@ -1,46 +1,41 @@
-.TH DH_CLEAN 1
+.TH DH_CLEAN 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_clean \- clean up package build directories
 .SH SYNOPSIS
 .B dh_clean
-.I "[-v] [-a] [-i] [-ppackage] [file ...]"
+.I "[debhelper options] [-k] [-d] [file ...]"
 .SH "DESCRIPTION"
 dh_clean is a debhelper program that is responsible for cleaning up after a
 package is built. It removes the package build directories, and removes some
 other files, such as debian/substvars, debian/files, DEADJOE, emacs backup 
-files, etc.
+files, any detritus left behind by other debhelper commands, etc.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Clean up the package build directory for all architecture dependent packages.
+.B \-k, \--keep
+Do not delete debian/files. When do you want to use this? Anytime you have a
+debian/rules that has 2 binary targets that build different .deb packages;
+for example, one target is binary-arch, and the other is binary-indep, or
+one target builds the shared library, and the other the -dev package. If you
+didn't use -k in these cases, then debian/files would be deleted in the
+middle, and your changes file will only contain the last binary package that
+was built.
 .TP
-.B \-i
-Clean up the package build directory for all architecture independent packages.
-.TP
-.B \-ppackage
-Clean up the package build directory for the package named "package".
+.B \-d, \--dirs-only
+Only clean the package build directories, do not clean up any other files at
+all.
 .TP
 .B file ...
 Delete these files too.
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will have thier package build directories cleaned up.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
-.SH BUGS
-Filenames with spaces in them will not currently be deleted when specified
-as parameters.
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
