--- a/dh_du.1
+++ b/dh_du.1
@@ -1,42 +1,16 @@
-.TH DH_DU 1
+.TH DH_DU 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_du \- generate DEBIAN/du file
+dh_du \- generate DEBIAN/du file (deprecated)
 .SH SYNOPSIS
-.B dh_md5sums
-.I "[-v] [-a] [-i] [-ppackage]"
+.B dh_du
 .SH "DESCRIPTION"
-dh_du is a debhelper program that is responsible for generating
-a DEBIAN/du file, which lists the disk usage of directories in the package.
-This file isn't used by anthing yet, but it could be helpful for a future
-debian installer program.
+dh_du is a debhelper program that was responsible for generating
+a DEBIAN/du file, which listed the disk usage of directories in the package.
 .P
-The du file is installed with proper permissions and ownerships.
-.SH OPTIONS
-.TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
-.TP
-.B \-a
-Generate du files for all architecture dependent packages.
-.TP
-.B \-i
-Generate du files for all architecture independent packages.
-.TP
-.B \-ppackage
-Generate du file for the package named "package".
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
-.SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+This program is now deprecated, and does nothing, after a decision by the
+debian developers that du control files should not exit. It will simply
+output a warning message now.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
