--- a/dh_installinit.1
+++ b/dh_installinit.1
@@ -65,4 +65,4 @@ instances of the same text to be added to maintainer scripts.
 .BR debhelper (1),
 .BR update_rc.d (8)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
