--- a/dh_installmime.1
+++ b/dh_installmime.1
@@ -39,4 +39,4 @@ for a list of environment variables that affect all debhelper commands.
 .TP
 .BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
