--- a/dh_installmodules.1
+++ b/dh_installmodules.1
@@ -36,4 +36,4 @@ instances of the same text to be added to maintainer scripts.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
