--- a/dh_installpam.1
+++ b/dh_installpam.1
@@ -31,4 +31,4 @@ instances of the same text to be added to maintainer scripts.
 .TP
 .BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
