--- a/dh_installxaw.1
+++ b/dh_installxaw.1
@@ -41,4 +41,4 @@ instances of the same text to be added to maintainer scripts.
 .TP
 .BR update-xaw-wrappers (8)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
