--- a/dh_link.1
+++ b/dh_link.1
@@ -70,4 +70,4 @@ in debian/links file. This is more a historical design flaw than a bug.
 .SH "CONFORMS TO"
 Debian policy, version 3.0.1
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
