--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -1,45 +1,36 @@
-.TH DH_MD5SUMS 1
+.TH DH_MD5SUMS 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_md5sums \- generate DEBIAN/md5sums file
 .SH SYNOPSIS
 .B dh_md5sums
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[debhelper options] [-x] [-Xitem]"
 .SH "DESCRIPTION"
 dh_md5sums is a debhelper program that is responsible for generating
 a DEBIAN/md5sums file, which lists the md5sums of each file in the package.
 .P
-All files in DEBIAN/ are omitted from the md5sums file.
+All files in DEBIAN/ are omitted from the md5sums file, as are all conffiles
+(unless you use the -x switch).
 .P
 The md5sums file is installed with proper permissions and ownerships.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Generate md5sums files for all architecture dependent packages.
+.B \-x, \--include-conffiles
+Include conffiles in the md5sums list. Note that this information is
+redundant since it is included elsewhere in debian packages.
 .TP
-.B \-i
-Generate md5sums files for all architecture independent packages.
-.TP
-.B \-ppackage
-Generate md5sums file for the package named "package".
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
+.B \-Xitem, --exclude=item
+Exclude files that contain "item" anywhere in their filename from
+being listed in the md5sums file.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
-.SH BUGS
-It would be better if it did not include md5sums of conffiles, since this
-info is duplicated elsewhere.
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
