--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -1,46 +1,49 @@
-.TH DH_MOVEFILES 1
+.TH DH_MOVEFILES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
-dh_movefiles \- moves files out of debian/tmp into subpackages
+dh_movefiles \- move files out of debian/tmp into subpackages
 .SH SYNOPSIS
 .B dh_movefiles
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir]"
+.I "[debhelper options] [--sourcedir=dir] [file ..]"
 .SH "DESCRIPTION"
 dh_movefiles is a debhelper program that is responsible for moving files out
-of debian/tmp and into other package build directories. This may be useful
-if your package has a Makefile that installs everything into debian/tmp, and
-you need to break that up into subpackages.
+of debian/tmp or some other directory and into other package build 
+directories. This may be useful if your package has a Makefile that installs
+everything into debian/tmp, and you need to break that up into subpackages.
 .P
 Files named debian/package.files list the files to be moved, separated by
-whitespace.
+whitespace. The filenames listed should be relative to debian/tmp/. You can
+also list directory names, and the whole directory will be moved. You can
+even use wildcards if you like. If you prefer, you can list the files to
+move on the command line and this will apply to the first package
+dh_movefiles is told to act on.
+.P
+The files will be moved in a special order: first all normal files, then all
+symlinks. This is done because it tends to be a good thing to have symlinks
+last in debian packages, particularly in shared library packages.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Move files for all architecture dependent packages.
+.B --sourcedir=dir
+Instead of moveing files out of debian/tmp (the default), this option makes
+it move files out of some other directory. Since the entire contents of
+the sourcedir is moved, specifiying something like --sourcedir=/ is very
+unsafe, so to prevent mistakes, the sourcedir must be a relative filename; it
+cannot begin with a `/'.
 .TP
-.B \-i
-Move files for all architecture independent packages.
-.TP
-.B \-ppackage
-Move files for the package named "package".
-.TP
-.B \-Ptmpdir
-Use "tmpdir" for package build directory. 
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
+.B file ..
+Lists files to move. The filenames listed should be relative to debian/tmp/.
+You can also list directory names, and the whole directory will be moved. You
+can even use wildcards if you like. It is an error to list files here unless
+you use -p, -i, or -a to tell dh_movefiles which subpackage to put them in.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
