--- a/dh_testversion.1
+++ b/dh_testversion.1
@@ -51,4 +51,4 @@ for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH AUTHOR
-Joey Hess <joeyh@master.debian.org>
+Joey Hess <joeyh@debian.org>
