r310:    * Fixed typo in dh_installmenu.1, Closes: #51332

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.75) unstable; urgency=low
+
+  * Fixed typo in dh_installmenu.1, Closes: #51332
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 27 Nov 1999 20:40:15 -0800
+
 debhelper (2.0.74) unstable; urgency=low
 
   * dh_suidregister: Die with understandable error message if asked to
