--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -40,7 +40,7 @@ for a list of environment variables that affect all debhelper commands.
 Note that this command is not idempotent. "dh_clean -k" should be called
 between invocations of this command. Otherwise, it may cause multiple
 instances of the same text to be added to maintainer scripts.
-x.SH "SEE ALSO"
+.SH "SEE ALSO"
 .TP
 .BR debhelper (1)
 .TP
