--- a/doc/TODO
+++ b/doc/TODO
@@ -56,3 +56,4 @@ Deprecated:
     time. I'm currently planning on doing this after slink is released or
     one year after they were deprecated, whichever comes first. Be sure to
     grep whole debian archive for all of them before removing them, though!
+  - It's about time to do this.
