r316: dh_installdebfiles is no longer a part of debhelper. This affects exactly one package in unstable, biss-awt, which has had a bug filed against it for 200+ days now asking that it stop using the program. dh_installdebfiles has been depreacted for nearly 2 years now..

--- a/doc/TODO
+++ b/doc/TODO
@@ -51,8 +51,9 @@ Wishlist items:
 
 Deprecated:
 
-* remove dh_installdebfiles, dh_du. 
+* remove dh_du. 
   - need to wait a reasonable length of
     time. I'm currently planning on doing this after slink is released or
     one year after they were deprecated, whichever comes first. Be sure to
     grep whole debian archive for all of them before removing them, though!
+  - currently, a few packages in potato use dh_du, but bugs have been filed.
