--- a/dh_shlibdeps.1
+++ b/dh_shlibdeps.1
@@ -3,7 +3,7 @@
 dh_shlibdeps \- calculate shared library dependancies
 .SH SYNOPSIS
 .B dh_shlibdeps
-.I "[debhelper options] [-ldirectory] [-uparams] [-- params]"
+.I "[debhelper options] [-ldirectory] [-uparams] [-Xitem] [-- params]"
 .SH "DESCRIPTION"
 dh_shlibdeps is a debhelper program that is responsible for calculating
 shared library dependancies for all executables found in the package build
@@ -11,7 +11,8 @@ directory.
 .P
 This program is merely a wrapper around
 .BR dpkg-shlibdeps (1)
-that calls it once for each package listed in the control file.
+that calls it once for each package listed in the control file, passing it
+a list of ELF executables it has found.
 .SH OPTIONS
 .TP
 .B debhelper options
@@ -24,6 +25,11 @@ for a list of options common to all debhelper commands.
 .B \-\- params
 Pass "params" to 
 .BR dpkg-shlibdeps (1)
+.TP
+.B \-Xitem, \--exclude=item 
+Exclude files that contain "item" anywhere in their filename from being
+passed to dpkg-shlibdeps. This will make their dependancies be ignored.
+This may be useful in some situations, but use it with caution.
 .TP
 .B \-ldirectory
 Before
