r322:    * dh_fixperms: chown symlinks as well as normal files. Closes: #51169.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.78) unstable; urgency=low
+
+  * dh_fixperms: chown symlinks as well as normal files. Closes: #51169.
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  1 Dec 1999 13:34:06 -0800
+
 debhelper (2.0.77) unstable; urgency=low
 
   * dh_suidregister: Fixed a rather esoteric bug: If a file had multiple
