r325:    * Corrected mispellings, Closes: #52013

--- a/dh_compress.1
+++ b/dh_compress.1
@@ -15,7 +15,7 @@ be compressed, namely all files in usr/share/info, usr/share/man,
 usr/X11R6/man, and all files in usr/share/doc that are larger than 4k in size,
 (except the copyright file, .html files and .gif files), and all changelog 
 files. It skips any files that appear to be already compressed (based on their
-extentions).
+extensions).
 .P
 If a debian/package.compress file exists (debian/compress may be used for the
 first binary package in debian/control), however, it will be ran as a shell
