--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -18,7 +18,7 @@ debian/changelog.)
 If an upstream changelog file is specified as an option, and the package is
 not a native debian package, then this upstream changelog will be installed
 as usr/share/doc/package/changelog in the package build directory. If the
-changelog is a html file (determined by file extention), it will be
+changelog is a html file (determined by file extension), it will be
 installed as usr/share/doc/package/changelog.html instead (with a link to
 usr/share/doc/package/changelog).
 .SH OPTIONS
