--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -14,7 +14,7 @@ The program takes a list of man pages that should be symlinked to
 .BR undocumented (7)
 It determines what directory the man pages should be placed in by examining
 their extensions - pages ending in "x" go into /usr/X11R6/man/, while pages
-that end in anything else go in /usr/share/man/. It also examines the extention
+that end in anything else go in /usr/share/man/. It also examines the extension
 to see what section the man page belongs in. After figuring this out, it
 generates the necessary symlinks to
 .BR undocumented (7)
