--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.79) unstable; urgency=low
+
+  * Corrected mispellings, Closes: #52013
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  6 Dec 1999 13:46:18 -0800
+
 debhelper (2.0.78) unstable; urgency=low
 
   * dh_fixperms: chown symlinks as well as normal files. Closes: #51169.
@@ -97,9 +103,9 @@ debhelper (2.0.69) unstable; urgency=low
     should make it easier for library packages that also build binary
     packages to be built with correct dependancies. Closes: #36751
   * In honor of Burn all GIFs Day (hi Don!), I added alternative
-    image formats .png, .jpg (and .jpeg) to the list of extentions dh_compress
+    image formats .png, .jpg (and .jpeg) to the list of extensions dh_compress
     does not compress. Closes: #41733
-  * Also, made all extentions dh_compress skips be looked at case
+  * Also, made all extensions dh_compress skips be looked at case
     insensitively.
   * dh_movefiles: force owner and group of installed files to be root.
     Closes: #46039
