r326:    * Type fix, Closes: #52652

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.80) unstable; urgency=low
+
+  * Type fix, Closes: #52652
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 13 Dec 1999 13:47:48 -0800
+
 debhelper (2.0.79) unstable; urgency=low
 
   * Corrected mispellings, Closes: #52013
