--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.81) unstable; urgency=low
+
+  * dh_installxaw: Patch from Josip Rodin to update to fhs paths, 
+    Closes: #53029
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Dec 1999 12:21:34 -0800
+
 debhelper (2.0.80) unstable; urgency=low
 
   * Type fix, Closes: #52652
