r328:    * Added dh_installmime calls to examples, Closes: #54056

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.82) unstable; urgency=low
+
+  * Added dh_installmime calls to examples, Closes: #54056
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Jan 2000 09:35:19 -0800
+
 debhelper (2.0.81) unstable; urgency=low
 
   * dh_installxaw: Patch from Josip Rodin to update to fhs paths, 
