r329:    * Depend on the current unstable fileutils, because I have to use chown      --no-dereference. I'm not sure when it started working, but it didn't work      in slink.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.83) unstable; urgency=low
+
+  * Depend on the current unstable fileutils, because I have to use chown
+    --no-dereference. I'm not sure when it started working, but it didn't work
+    in slink.
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  5 Jan 2000 14:22:26 -0800
+
 debhelper (2.0.82) unstable; urgency=low
 
   * Added dh_installmime calls to examples, Closes: #54056
