r330:    * Make all examples rules files executable.    * Copyright date updates.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.84) unstable; urgency=low
+
+  * Make all examples rules files executable.
+  * Copyright date updates.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  6 Jan 2000 15:10:55 -0800
+
 debhelper (2.0.83) unstable; urgency=low
 
   * Depend on the current unstable fileutils, because I have to use chown
