r331:    * Downgraded fileutils dependancy just a bit for the Hurd foks.      Closes: #54620

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.85) unstable; urgency=low
+
+  * Downgraded fileutils dependancy just a bit for the Hurd foks. 
+    Closes: #54620
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Jan 2000 16:41:29 -0800
+
 debhelper (2.0.84) unstable; urgency=low
 
   * Make all examples rules files executable.
