r332:    * dh_testroot: don't call init(), so it may be run even if it's not in the      right place. Closes: #55065

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.86) unstable; urgency=low
+
+  * dh_testroot: don't call init(), so it may be run even if it's not in the
+    right place. Closes: #55065
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 Jan 2000 21:40:21 -0800
+
 debhelper (2.0.85) unstable; urgency=low
 
   * Downgraded fileutils dependancy just a bit for the Hurd foks. 
