--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (2.0.87) unstable; urgency=low
+
+  * README: Documented what you should do if you want to make a package that
+    depends on another package, use the other package's doc dir as its own,
+    with a symlink. Closes: #53381
+    
+     ** TODO ** this fix is not good enough, the /usr/doc symlink needs to
+     be handled in the postinst, not appear in the .deb, to comply with
+     policy.
+	    
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 15 Jan 2000 01:31:40 -0800
+
 debhelper (2.0.86) unstable; urgency=low
 
   * dh_testroot: don't call init(), so it may be run even if it's not in the
