r336:    * Documented that lynx is used to convert html changelogs. Closes: #54055

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,8 @@
 debhelper (2.0.87) unstable; urgency=low
 
-  * README: Documented what you should do if you want to make a package that
-    depends on another package, use the other package's doc dir as its own,
-    with a symlink. Closes: #53381
-    
-     ** TODO ** this fix is not good enough, the /usr/doc symlink needs to
-     be handled in the postinst, not appear in the .deb, to comply with
-     policy.
-	    
+  * Documented that lynx is used to convert html changelogs. Closes: #54055
 
- -- Joey Hess <joeyh@debian.org>  Sat, 15 Jan 2000 01:31:40 -0800
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 Feb 2000 16:01:19 -0800
 
 debhelper (2.0.86) unstable; urgency=low
 
