--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -19,8 +19,9 @@ If an upstream changelog file is specified as an option, and the package is
 not a native debian package, then this upstream changelog will be installed
 as usr/share/doc/package/changelog in the package build directory. If the
 changelog is a html file (determined by file extension), it will be
-installed as usr/share/doc/package/changelog.html instead (with a link to
-usr/share/doc/package/changelog).
+installed as usr/share/doc/package/changelog.html instead, and will be
+converted to plain text with lynx to generate
+usr/share/doc/package/changelog .
 .SH OPTIONS
 .TP
 .B debhelper options
