--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.88) unstable; urgency=low
+
+  * Copyright update: files in the examples directory are public domain.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 Feb 2000 23:16:39 -0800
+
 debhelper (2.0.87) unstable; urgency=low
 
   * Documented that lynx is used to convert html changelogs. Closes: #54055
