--- a/dh_installemacsen.1
+++ b/dh_installemacsen.1
@@ -3,7 +3,7 @@
 dh_installemacsen \- register an emacs add on package
 .SH SYNOPSIS
 .B dh_installemacsen
-.I "[debhelper options] [-n] [--number=n] [--flavor=foo]"
+.I "[debhelper options] [-n] [--priority=n] [--flavor=foo]"
 .SH "DESCRIPTION"
 dh_installemacsen is a debhelper program that is responsible for installing
 files used by the debian emacsen-common package into package build directories. 
@@ -32,7 +32,7 @@ for a list of options common to all debhelper commands.
 .B \-n, \--noscripts
 Do not modify postinst/prerm scripts.
 .TP
-.B \--number=n
+.B \--priority=n
 Sets the priority number of a site-start.d file. Default is 50.
 .TP
 .B \--flavor=foo
