--- a/doc/TODO
+++ b/doc/TODO
@@ -57,3 +57,6 @@ Deprecated:
     one year after they were deprecated, whichever comes first. Be sure to
     grep whole debian archive for all of them before removing them, though!
   - currently, a few packages in potato use dh_du, but bugs have been filed.
+* Remove support for --number option
+  - only dh_installemacsen ever used it, it is not --priority.
+
