--- a/debhelper.1
+++ b/debhelper.1
@@ -36,7 +36,7 @@ circumstances. It understands that if the control file lists "Architecture: i386
 for the package, the package should not be acted on on other architectures. So
 this flag makes the command act on all "Architecture: any" packages, as well
 as on any packages that have the current architecture explicitly specified.
-Constrast to the -a flag, which makes the command work on all packages that
+Contrast to the -a flag, which makes the command work on all packages that
 are not architecture independant.
 .TP
 .B \-Npackage, \--no-package=package
