r341:    * Fixed dh_testversion; broken in last release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.90) unstable; urgency=low
+
+  * Fixed dh_testversion; broken in last release.
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  4 Mar 2000 13:16:58 -0800
+
 debhelper (2.0.89) unstable; urgency=low
 
   * Patch from Jorgen `forcer' Schaefer <forcer at mindless.com> (much
