--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.91) unstable; urgency=low
+
+  * Fixed a simmy typo in dh_installmanpages, Closes: #60727
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 18 Mar 2000 23:23:01 -0800
+
 debhelper (2.0.90) unstable; urgency=low
 
   * Fixed dh_testversion; broken in last release.
