r343:    * Detect changelog parse failures and use a better error message.      Closes: #62058

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
+debhelper (2.0.92) unstable; urgency=low
+
+  * Detect changelog parse failures and use a better error message. 
+    Closes: #62058
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  8 Apr 2000 20:02:16 -0700
+
 debhelper (2.0.91) unstable; urgency=low
 
-  * Fixed a simmy typo in dh_installmanpages, Closes: #60727
+  * Fixed a silly typo in dh_installmanpages, Closes: #60727
 
  -- Joey Hess <joeyh@debian.org>  Sat, 18 Mar 2000 23:23:01 -0800
 
