r344:    * Patch from Pedro Guerreiro to make install-docs only be called on      configure and remove/upgrade. Closes: #62513

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.93) unstable; urgency=low
+
+  * Patch from Pedro Guerreiro to make install-docs only be called on
+    configure and remove/upgrade. Closes: #62513
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Apr 2000 19:05:52 -0700
+
 debhelper (2.0.92) unstable; urgency=low
 
   * Detect changelog parse failures and use a better error message. 
