r345:    * examples/rules.multi2: binary-indep and binary-arch targets need to      depend on the build and install targets.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.94) unstable; urgency=low
+
+  * examples/rules.multi2: binary-indep and binary-arch targets need to
+    depend on the build and install targets.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 17 Apr 2000 15:09:26 -0700
+
 debhelper (2.0.93) unstable; urgency=low
 
   * Patch from Pedro Guerreiro to make install-docs only be called on
