r348:    * Fixes for perl 5.6.    * Spelling fixes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.95) unstable; urgency=low
+
+  * Fixes for perl 5.6.
+  * Spelling fixes.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  1 May 2000 13:35:11 -0700
+
 debhelper (2.0.94) unstable; urgency=low
 
   * examples/rules.multi2: binary-indep and binary-arch targets need to
