r349:    * dh_installmodules: still add depmod -a calls if run on a package that      has no debian/modules file, but does contain modules.

--- a/dh_installmodules.1
+++ b/dh_installmodules.1
@@ -15,7 +15,9 @@ in the package build directory.
 Then postinst and postrm commands are automatically generated to register
 the modules when the package is installed. See
 .BR dh_installdeb (1)
-for an explanation of how this works.
+for an explanation of how this works. Note that this will be done for any
+package this program acts on which has either the above-mentioned file, or 
+has .o files in /lib/modules.
 .SH OPTIONS
 .TP
 .B debhelper options
