--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.96) unstable; urgency=low
+
+  * dh_installmodules: still add depmod -a calls if run on a package that
+    has no debian/modules file, but does contain modules.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  4 May 2000 15:32:42 -0700
+
 debhelper (2.0.95) unstable; urgency=low
 
   * Fixes for perl 5.6.
