r350:    * dh_installinfo: changed test to see if an info file is the head file to      just skip files that end in -\d+.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.97) unstable; urgency=low
+
+  * dh_installinfo: changed test to see if an info file is the head file to
+    just skip files that end in -\d+.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 11 May 2000 14:11:04 -0700
+
 debhelper (2.0.96) unstable; urgency=low
 
   * dh_installmodules: still add depmod -a calls if run on a package that
