r351:    * dh_installdebconf: Automatically merge localized template      files. If you use this feature, you should build-depend on      debconf-utils to get debconf-mergetemplate.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.98) unstable; urgency=low
+
+  * dh_installdebconf: Automatically merge localized template
+    files. If you use this feature, you should build-depend on
+    debconf-utils to get debconf-mergetemplate.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 19 May 2000 14:24:24 -0700
+
 debhelper (2.0.97) unstable; urgency=low
 
   * dh_installinfo: changed test to see if an info file is the head file to
