--- a/dh_installdebconf.1
+++ b/dh_installdebconf.1
@@ -20,6 +20,23 @@ For the first first binary package listed in the control file, you may use
 debian/config and debian/templates instead.
 .P
 Note that if you use debconf, your package probably needs to depend on it.
+.SH "LOCALIZED TEMPLATE FILES"
+Debconf also supports localized template files, and this program has some
+support to aid working with them. You may find it easiest to keep the
+translations in separate files, and merge them only at build time. See
+.BR debconf-mergetemplate (1)
+for details.
+.P
+This program will automatically call 
+.BR debconf-mergetemplate (1)
+and merge templates on the fly if it finds your template files are accompnied
+by translated files that have the same name as the template file, with a
+dot and two letters prepended.
+.P
+For example, if you have a German translation,
+debian/templates.de is merged with debian/templates.
+.P
+If you use this feature, your package should build-depend on debconf-utils.
 .SH OPTIONS
 .TP
 .B debhelper options
